--- a/lora_finetuning_llm.ipynb
+++ b/lora_finetuning_llm.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPQWkZJN3USmoEZ88Yv1M4l"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
